@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
-<addon id="script.module.b808common" version="0.0.8" name="Bossanova808 Common Code" provider-name="bossanova808">
+<addon id="script.module.b808common" version="0.0.9" name="Bossanova808 Common Code" provider-name="bossanova808">
   <requires>
     <import addon='xbmc.python' version='2.0'/>
   </requires>
   <extension point='xbmc.addon.metadata'>
     <platform>all</platform>
-    <summary lang='en'>Installed automatically with Bossanova808 addons - common code for OzWeather, XZen, XSqueeze etc.</summary>
+    <summary lang='en'>Installed automatically with Bossanova808 addons - common code for XSqueeze etc.</summary>
   </extension>
   <extension point='xbmc.python.module' library='lib' />
 </addon>
